Sun Feb  8 13:09:32 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (RUBY_APPEND_OPTION, RUBY_APPEND_OPTIONS),
	  (RUBY_PREPEND_OPTION, RUBY_PREPEND_OPTIONS): add option(s)
	  without duplication.

	* configure.in (RUBY_DEFINE_IF): changed parameter order, now
	  condition comes first.

	* configure.in (universal_binary): checks architecture macros, and
	  improved thin load paths.

Sun Feb  8 09:41:47 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* runruby.rb: gets extout and arch from rbconfig.rb.

Sat Feb  7 21:26:15 2009  Tanaka Akira  <akr@fsij.org>

	* test/socket/test_addrinfo.rb (test_family_addrinfo): don't use
	  www.ruby-lang.org.
	  http://d.hatena.ne.jp/nagachika/20090204/working_for_0f0e

Sat Feb  7 18:02:48 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (--with-arch): added new option to suppor
	  universal binary.  replaced --enable-fat-binary option which
	  didn't work actually.

	* configure.in (RUBY_FUNC_ATTRIBUTE): added conditional test.

	* configure.in (ac_cv_type_getgroups): decalared because getgroups()
	  fills rest of the buffer with garbages on Rosetta.

	* configure.in (alloca): defines only for powerpc, but always
	  create empty object to suppress ld warning.

	* configure.in (LIBRUBY_DLDFLAGS): set compatibility version with
	  TEENY.

	* configure.in (CFLAGS, LDFLAGS): separates ARCH_FLAG.

	* configure.in (arch): renamed to "universal" from "fat".

	* Makefile.in (ARCH_FLAG): added.

	* include/ruby/defines.h (WORDS_BIGENDIAN): uses
	  AC_APPLE_UNIVERSAL_BUILD.

	* missing/alloca.c (alloca): defines only if C_ALLOCA is defined.

Sat Feb  7 12:31:03 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* runruby.rb: added --precommand and --show options.

	* runruby.rb: added --cpu option.

	* runruby.rb: skips version check in rbconfig.rb.

Sat Feb  7 11:44:06 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/mkmf.rb (have_header): needs dependent headers if trying to
	  compile.
